--- a/index.html
+++ b/index.html
@@ -229,6 +229,9 @@
       <button type="button" class="error__button">Попробовать снова</button>
     </div>
   </template>
+  <script src="js/util.js" type="module"></script>
+  <script src="js/data.js" type="module"></script>
+  <script src="js/form.js" type="module"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
